--- a/TaskManager.Presentation/TaskManager.Presentation.csproj
+++ b/TaskManager.Presentation/TaskManager.Presentation.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="UI\" />
+    <ProjectReference Include="..\TaskManager.Application\TaskManager.Application.csproj" />
   </ItemGroup>
 
 </Project>
